--- a/Makefile.libretro
+++ b/Makefile.libretro
@@ -751,7 +751,10 @@ $(OBJ)/build/file2str:
 	cp -R prec-build/file2str $(OBJ)/build 
 
 $(OBJ)/build/m68kmake:
-	cp -R prec-build/m68kmake $(OBJ)/build 
+	cp -R prec-build/m68kmake $(OBJ)/build
+	
+$(OBJ)/build/tmsmake:
+	cp -R prec-build/tmsmake $(OBJ)/build 
 
 $(OBJ)/build/png2bdc:
 	cp -R prec-build/png2bdc $(OBJ)/build 
