--- a/Makefile.libretro
+++ b/Makefile.libretro
@@ -171,7 +171,10 @@ BIGENDIAN=1
 else
 	PLATCFLAGS += -DLSB_FIRST
 endif
-else ifeq ($(platform), ios)
+
+# iOS
+else ifneq (,$(findstring ios,$(platform)))
+
    TARGETLIB := $(TARGET_NAME)_libretro_ios.dylib
    TARGETOS = macosx
 EXTRA_RULES = 1
@@ -179,7 +182,7 @@ ARM_ENABLED = 1
    fpic := -fPIC
    SHARED := -dynamiclib
 
-   CC = clang++ -arch armv7 -isysroot $(IOSSDK)
+   CC = c++ -arch armv7 -isysroot $(IOSSDK)
    CCOMFLAGS += -DSDLMAME_NO64BITIO
    CFLAGS += -DIOS
 else ifeq ($(platform), qnx)
