--- a/Makefile.common
+++ b/Makefile.common
@@ -4513,14 +4513,14 @@ $(LIBOBJ)/softfloat/softfloat.o: $(LIBSRC)/softfloat/softfloat.c \
 
 MINISRC = $(SRC_DIR)/osd/$(OSD)
 MINIOBJ = $(OBJ)/osd/$(OSD)
-LIBCOOBJ = $(OBJ)/osd/$(OSD)/libretro-common/libco
+#LIBCOOBJ = $(OBJ)/osd/$(OSD)/libretro-common/libco
 ifeq ($(VRENDER),opengl)
 GLOBJ = $(OBJ)/osd/$(OSD)/glsym
 OBJDIRS += $(GLOBJ)
 endif
 OBJDIRS += $(MINIOBJ) \
 			  $(OBJ)/osd/$(OSD)/libretro-common \
-			  $(OBJ)/osd/$(OSD)/libretro-common/libco
+#			  $(OBJ)/osd/$(OSD)/libretro-common/libco
 
 #-------------------------------------------------
 # OSD core library
@@ -4537,7 +4537,7 @@ OSDCOREOBJS := \
 #-------------------------------------------------
 # OSD mini library
 #-------------------------------------------------
-OSDOBJS = $(LIBCOOBJ)/libco.o 
+#OSDOBJS = $(LIBCOOBJ)/libco.o 
 ifeq ($(VRENDER),opengl)
 OSDOBJS += $(MINIOBJ)/libretro-common/glsym/rglgen.o
 ifeq ($(GLES), 1)
