--- a/Makefile.common
+++ b/Makefile.common
@@ -3,7 +3,7 @@ LIBRETRO_COMM_DIR = $(SRC_DIR)/osd/retro/libretro-common
 DEPS_DIR          = $(SRC_DIR)/lib
 
 INCFLAGS := \
-   -I$(LIBRETRO_COMM_DIR)/include \
+	-I$(LIBRETRO_COMM_DIR)/include \
 	-I$(SRC_DIR)/$(TARGET) \
 	-I$(OBJ)/$(TARGET)/layout \
 	-I$(SRC_DIR)/emu \
@@ -12,7 +12,13 @@ INCFLAGS := \
 	-I$(DEPS_DIR)/util \
 	-I$(SRC_DIR)/lib \
 	-I$(SRC_DIR)/osd \
-	-I$(SRC_DIR)/osd/retro \
+	-I$(SRC_DIR)/osd/retro
+    
+ifeq ($(BUILD_BIN2C), 1)
+	INCFLAGS += -I$(CORE_DIR)/precompile
+else
+	INCFLAGS += -I$(CORE_DIR)/metadata
+endif
 
 # add expat XML library
 INCFLAGS += -I$(DEPS_DIR)/expat
