--- a/Makefile.common
+++ b/Makefile.common
@@ -4523,10 +4523,13 @@ ifeq ($(VRENDER),opengl)
 GLOBJ = $(OBJ)/osd/$(OSD)/glsym
 OBJDIRS += $(GLOBJ)
 endif
-OBJDIRS += $(MINIOBJ) \
-			  $(OBJ)/osd/$(OSD)/libretro-common \
-              $(OBJ)/osd/$(OSD)/libretro-common/compat \
-              $(OBJ)/osd/$(OSD)/libretro-common/file
+OBJDIRS += $(MINIOBJ)
+
+ifneq ($(STATIC_LINKING), 1)
+OBJDIRS += $(OBJ)/osd/$(OSD)/libretro-common \
+			  $(OBJ)/osd/$(OSD)/libretro-common/compat \
+			  $(OBJ)/osd/$(OSD)/libretro-common/file
+endif
 
 #-------------------------------------------------
 # OSD core library
@@ -4535,10 +4538,14 @@ OSDCOREOBJS := \
 	$(MINIOBJ)/retrodir.o \
 	$(MINIOBJ)/retrofile.o \
 	$(MINIOBJ)/retromisc.o \
-	$(MINIOBJ)/retroos.o \
+	$(MINIOBJ)/retroos.o
+
+ifneq ($(STATIC_LINKING), 1)
+OSDCOREOBJS += \
     $(MINIOBJ)/libretro-common/file/file_path.o \
     $(MINIOBJ)/libretro-common/compat/compat_strcasestr.o \
     $(MINIOBJ)/libretro-common/compat/compat_strl.o    
+endif
 
 ifeq ($(platform), wiiu)
 OSDCOREOBJS += \
