--- a/Makefile.common
+++ b/Makefile.common
@@ -4,6 +4,7 @@ DEPS_DIR          = $(SRC_DIR)/lib
 
 INCFLAGS := \
 	-I$(LIBRETRO_COMM_DIR)/include \
+	-I$(LIBRETRO_COMM_DIR)/include/compat/zlib \
 	-I$(SRC_DIR)/$(TARGET) \
 	-I$(OBJ)/$(TARGET)/layout \
 	-I$(SRC_DIR)/emu \
