--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -8,6 +8,8 @@ include:
     file: '/linux-x64.yml'
   - project: 'libretro-infrastructure/ci-templates'
     file: '/windows-x64-mingw.yml'
+  - project: 'libretro-infrastructure/ci-templates'
+    file: '/android-jni.yml'
 
 stages:
   - build-prepare
@@ -32,3 +34,19 @@ libretro-build-windows-x64:
     AR:       x86_64-w64-mingw32-ar
     NATIVELD: x86_64-w64-mingw32-ld
     LD:       x86_64-w64-mingw32-ld
+
+# Android
+android-armeabi-v7a:
+  extends:
+    - .core-defs
+    - .libretro-android-jni-armeabi-v7a
+
+android-arm64-v8a:
+  extends:
+    - .core-defs
+    - .libretro-android-jni-arm64-v8a
+
+android-x86_64:
+  extends:
+    - .core-defs
+    - .libretro-android-jni-x86_64
