--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -48,12 +48,9 @@ libretro-build-windows-x64:
     - .libretro-windows-x64-mingw-make-default
     - .core-defs
   variables:
-    CC:       x86_64-w64-mingw32-g++
-    CXX:      x86_64-w64-mingw32-g++
-    CC_AS:    x86_64-w64-mingw32-gcc
-    AR:       x86_64-w64-mingw32-ar
-    NATIVELD: x86_64-w64-mingw32-ld
-    LD:       x86_64-w64-mingw32-ld
+    CC:       ${CXX}
+    CC_AS:    ${CC}
+    NATIVELD: ${LD}
     
 # Linux 64-bit
 libretro-build-linux-x64:
